# app/Http/Controllers/Manage/RoleController.php
@@ -338,42 +338,6 @@ class RoleController extends Controller
         return response()->json(null, 204);
     }
 
-    #[
-        OA\Patch(
-            path: "/api/v1/roles/{id}/restore",
-            summary: "Restore role by id",
-            description: '__*Security:*__ __*can be used only by clients with \'admin\' role*__',
-            operationId: "Role.restore",
-            tags: ["Roles"],
-            security: [["passport" => ["manage-idp"]]],
-            parameters: [
-                new OA\Parameter(
-                    in: "path",
-                    required: true,
-                    description: "Role id",
-                    name: "id",
-                    schema: new OA\Schema(type: "integer", minimum: 1),
-                ),
-            ],
-            responses: [
-                new OA\Response(
-                    response: 200,
-                    description: "Operation successful",
-                    content: new OA\MediaType(mediaType: "application/json"),
-                ),
-                new OA\Response(
-                    response: 404,
-                    description: "Not found",
-                    content: new OA\MediaType(mediaType: "application/json"),
-                ),
-                new OA\Response(
-                    response: 500,
-                    description: "Error on restoring",
-                    content: new OA\MediaType(mediaType: "application/json"),
-                ),
-            ],
-        ),
-    ]
     public function restore($id)
     {
         $role = Role::withTrashed()->find($id);
